<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/screen_vertical_padding"
        android:paddingEnd="@dimen/screen_horizontal_padding"
        android:paddingStart="@dimen/screen_horizontal_padding"
        android:paddingTop="@dimen/screen_vertical_padding">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/exercise_21_operator"
            android:textColor="@color/white" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/exercise_21_wifi_content_description"
            android:src="@drawable/ic_network_wifi_white_24dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/exercise_21_network_content_description"
            android:src="@drawable/ic_network_cell_white_24dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/exercise_21_battery"
            android:src="@drawable/ic_battery_charging_full_white_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/screen_horizontal_padding"
            android:text="@string/exercise_21_battery"
            android:textColor="@color/white" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/ic_account_circle_black_24dp"
            android:tint="@color/material_blue" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.40"
        android:gravity="center_horizontal|bottom"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise_21_hour"
            android:textColor="@color/white"
            android:textSize="@dimen/hour_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.2"
            android:text="@string/exercise_21_date"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/date_size" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.60"
        android:gravity="bottom"
        android:text="@string/exercise_21_unlock"
        android:textColor="@color/white"
        android:textStyle="italic" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_bar"
        android:layout_marginTop="@dimen/screen_vertical_padding"
        android:paddingEnd="@dimen/screen_horizontal_padding"
        android:paddingStart="@dimen/screen_horizontal_padding">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/exercise_21_micro_content_description"
            android:src="@drawable/ic_mic_white_24dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/exercise_21_lock_content_description"
            android:src="@drawable/ic_lock_open_white_24dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/exercise_21_photo_content_description"
            android:src="@drawable/ic_camera_alt_white_24dp" />
    </RelativeLayout>
</LinearLayout>