<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/screen_vertical_padding"
    android:layout_marginLeft="@dimen/screen_horizontal_padding"
    android:layout_marginRight="@dimen/screen_horizontal_padding"
    android:layout_marginTop="@dimen/screen_vertical_padding"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/screen_vertical_padding"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/screen_vertical_padding"
            android:drawableTop="@drawable/ic_tv_black_24dp"
            android:gravity="center_horizontal"
            android:text="@string/exercise_19_tv" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/screen_vertical_padding"
            android:drawableTop="@drawable/ic_local_parking_black_24dp"
            android:gravity="center_horizontal"
            android:text="@string/exercise_19_parking" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/screen_vertical_padding"
            android:drawableTop="@drawable/ic_network_wifi_black_24dp"
            android:gravity="center_horizontal"
            android:text="@string/exercise_19_wifi" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/screen_vertical_padding"
            android:drawableTop="@drawable/ic_restaurant_black_24dp"
            android:gravity="center_horizontal"
            android:text="@string/exercise_19_kitchen" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/screen_vertical_padding"
        android:background="@color/grey" />

</LinearLayout>