<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.40">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/header_vertical_padding"
                android:paddingEnd="@dimen/screen_horizontal_padding"
                android:paddingStart="@dimen/screen_horizontal_padding"
                android:paddingTop="@dimen/header_vertical_padding">

                <TextView
                    android:id="@+id/french"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/exercise_22_french_title"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/section_size" />

                <ImageView
                    android:id="@+id/french_dropdown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/french"
                    android:contentDescription="@string/exercise_22_drop_down_content_description"
                    android:src="@drawable/ic_arrow_drop_down_black_24dp"
                    android:tint="@color/material_blue" />

                <ImageView
                    android:id="@+id/swap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="@dimen/screen_horizontal_padding"
                    android:layout_marginStart="@dimen/screen_horizontal_padding"
                    android:contentDescription="@string/exercise_22_switch_content_description"
                    android:src="@drawable/ic_swap_horiz_black_24dp"
                    android:tint="@color/blue" />

                <TextView
                    android:id="@+id/gaelic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/swap"
                    android:layout_toStartOf="@+id/gaelic_dropdown"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/exercise_22_chinese_title"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/section_size" />

                <ImageView
                    android:id="@+id/gaelic_dropdown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/exercise_22_drop_down_content_description"
                    android:src="@drawable/ic_arrow_drop_down_black_24dp"
                    android:tint="@color/blue" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/header_vertical_padding"
                android:paddingEnd="@dimen/screen_horizontal_padding"
                android:paddingStart="@dimen/screen_horizontal_padding"
                android:paddingTop="@dimen/header_vertical_padding">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/icon_sound_right_padding"
                    android:contentDescription="@string/exercise_22_volume_content_description"
                    android:src="@drawable/ic_volume_up_black_24dp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/exercise_22_french_title"
                    android:textAllCaps="true" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/exercise_22_delete_content_description"
                    android:src="@drawable/ic_close_black_24dp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingEnd="@dimen/screen_horizontal_padding"
                android:paddingStart="@dimen/screen_horizontal_padding"
                android:text="@string/exercise_22_french_word"
                android:textSize="@dimen/traduction_size" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/bottom_bar"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/screen_horizontal_padding"
                android:paddingStart="@dimen/screen_horizontal_padding">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/exercise_22_photo_content_description"
                    android:src="@drawable/ic_camera_enhance_black_24dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/exercise_22_micro_content_description"
                    android:src="@drawable/ic_mic_white_24dp"
                    android:tint="@color/black" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/exercise_22_gesture_content_description"
                    android:src="@drawable/ic_gesture_black_24dp" />

            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.60">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_padding"
            app:cardBackgroundColor="@color/blue">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/header_vertical_padding"
                    android:paddingEnd="@dimen/screen_horizontal_padding"
                    android:paddingStart="@dimen/screen_horizontal_padding"
                    android:paddingTop="@dimen/header_vertical_padding">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/icon_sound_right_padding"
                        android:contentDescription="@string/exercise_22_volume_content_description"
                        android:src="@drawable/ic_volume_up_black_24dp"
                        android:tint="@color/white" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/exercise_22_chinese_title"
                        android:textAllCaps="true"
                        android:textColor="@color/white" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/exercise_22_favorites_content_description"
                        android:src="@drawable/ic_star_border_black_24dp"
                        android:tint="@color/white" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:paddingEnd="@dimen/screen_horizontal_padding"
                    android:paddingStart="@dimen/screen_horizontal_padding"
                    android:text="@string/exercise_22_chinese_word"
                    android:textColor="@color/white"
                    android:textSize="@dimen/traduction_size" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/bottom_bar"
                    android:gravity="end|center_vertical"
                    android:orientation="horizontal"
                    android:paddingEnd="@dimen/screen_horizontal_padding"
                    android:paddingStart="@dimen/screen_horizontal_padding">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/screen_horizontal_padding"
                        android:contentDescription="@string/exercise_22_copy_content_description"
                        android:src="@drawable/ic_content_copy_black_24dp"
                        android:tint="@color/white" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/screen_horizontal_padding"
                        android:contentDescription="@string/exercise_22_more_content_description"
                        android:src="@drawable/ic_more_vert_black_24dp"
                        android:tint="@color/white" />

                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</LinearLayout>

