<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1">

        <ImageView
            android:layout_width="@dimen/circle_shape_size"
            android:layout_height="@dimen/circle_shape_size"
            android:layout_gravity="center"
            android:contentDescription="@string/exercise_20_chrono_content_description"
            android:src="@drawable/circle_white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exercise_20_hour_minute"
                android:textColor="@color/white"
                android:textSize="@dimen/chrono_hour_minute_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/second_left_padding"
                android:text="@string/exercise_20_second"
                android:textColor="@color/white"
                android:textSize="@dimen/chrono_second_size" />
        </LinearLayout>

    </FrameLayout>

    <ImageView
        android:layout_width="@dimen/oval_shape_size"
        android:layout_height="@dimen/oval_shape_size"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/oval_padding"
        android:layout_marginTop="@dimen/oval_padding"
        android:background="@drawable/oval_red"
        android:contentDescription="@string/exercise_20_chrono_content_description"
        android:scaleType="center"
        android:src="@drawable/ic_play_arrow_white_24dp" />

</LinearLayout>